Convert to circleci, vault and naiserator