@@ -1,8 +1,6 @@
-FROM openjdk:9-jre-slim
+FROM navikt/java:11
 
 EXPOSE 8080
-
-MAINTAINER NAV IKT <tommy.kristiansen@nav.no>
 
 LABEL package="no.difi"
 LABEL artifact="meldingsformidler"
@@ -13,13 +11,11 @@ ENV LC_ALL="no_NB.UTF-8"
 ENV LANG="no_NB.UTF-8"
 ENV TZ="Europe/Oslo"
 
-# Please see https://blogs.oracle.com/java-platform-group/java-se-support-for-docker-cpu-and-memory-limits
-ENV JAVA_APP_PARAMS='-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap'
 # -Dlogback.configurationFile=/app/logback-spring.xml'
 #ENV JAVA_LOGG_OVERRIDE='-Dlogging.level.org.springframework.ws.client.MessageTracing=DEBUG -Dlogging.level.org.springframework.ws.server.MessageTracing=DEBUG -Dlogging.level.mf.logger.translog=DEBUG -Dlogging.level.no.difi.sdp.client2.internal.DigipostMessageSenderFacade=DEBUG'
 #ENV JAVA_LOGG_OVERRIDE='-Dlogging.level=DEBUG'
 
-ENV APP_MAIN_CLASS no.difi.meldingsutveksling.IntegrasjonspunktApplication
+ENV RUNTIME_OPTS 'no.difi.meldingsutveksling.IntegrasjonspunktApplication --spring.profiles.active=${APP_PROFILE}'
 ENV APP_PROFILE staging
 ENV SPRING_CLOUD_CONFIG_ENABLED true
 ENV SERVER_PORT 8080
@@ -31,9 +27,8 @@ ENV ENDPOINTS_INFO_ENABLED=true
 
 COPY integrasjonspunkt.jar /app/app.jar
 COPY logback-spring.xml /app
-
+COPY config-dev.properties /app
+COPY config-prod.properties /app
+COPY 10-inject-keystore-credentials.sh /init-scripts
 
 WORKDIR /app
-
-#CMD java -jar ${APP_JAVA_PARAMS} ${JAVA_LOGG_OVERRIDE} app.jar ${APP_MAIN_CLASS} --spring.profiles.active=${APP_PROFILE}
-CMD java -jar ${APP_JAVA_PARAMS}  app.jar ${APP_MAIN_CLASS} --spring.profiles.active=${APP_PROFILE}
